force-app/main/default/objects/WAC_Agency_Zip__c/WAC_Agency_Zip__c.object-meta.xml
<CustomObject>
    <description>WAC Agency zip code list</description>
    <label>WAC Agency Zip</label>
    <nameField>
        <displayFormat>WZ{000000}</displayFormat>
        <label>NAME (WAC Zip Seq)</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WAC Agency Zip</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>