force-app/main/default/objects/WAC_Agency_Zip__c/fields/EFFECTIVE_FROM__c.field-meta.xml
<CustomField>
    <fullName>EFFECTIVE_FROM__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>EFFECTIVE FROM</label>
    <required>true</required>
    <type>Date</type>
</CustomField>