force-app/main/default/objects/WAC_Agency_Zip__c/fields/EFFECTIVE_TO__c.field-meta.xml
<CustomField>
    <fullName>EFFECTIVE_TO__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>EFFECTIVE TO</label>
    <type>Date</type>
</CustomField>