force-app/main/default/objects/WAC_Agency_Zip__c/fields/WAC_Agency__c.field-meta.xml
<CustomField>
    <fullName>WAC_Agency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>WAC Agency</label>
    <referenceTo>WAC_Agency__c</referenceTo>
    <relationshipLabel>Agency Zip</relationshipLabel>
    <relationshipName>Agency_Zip</relationshipName>
    <type>Lookup</type>
</CustomField>