force-app/main/default/objects/WAC_Agency_Zip__c/fields/ZIP_CODE__c.field-meta.xml
<CustomField>
    <fullName>ZIP_CODE__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ZIP CODE</label>
    <length>5</length>
    <required>true</required>
    <type>Text</type>
</CustomField>